application/terraform/ecs/main.tf
resource "aws_vpc" "vpc" {
  cidr_block         = "10.0.0.0/16"
  #enable_dns_support = true

  lifecycle {
    ignore_changes = [
      tags
    ]
  }
}

resource "aws_subnet" "subnetA" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone =   "sa-east-1a"
}

resource "aws_subnet" "subnetB" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.0.2.0/24"
  map_public_ip_on_launch = true
  availability_zone =   "sa-east-1b"
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.vpc.id
}

resource "aws_route_table" "route_ec2" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
}

#resource "aws_eip" "gateway" {
#  count      = 2
#  vpc        = true
#  depends_on = [aws_internet_gateway.gw]
#}

#resource "aws_nat_gateway" "gateway" {
#  count         = 2
#  subnet_id     = element(aws_subnet.main.*.id, count.index)
#  allocation_id = element(aws_eip.gateway.*.id, count.index)
#}

resource "aws_route_table_association" "public-subnetB" {
  subnet_id      = aws_subnet.subnetB.id
  route_table_id = aws_route_table.route_ec2.id
}

resource "aws_route_table_association" "public-subnetA" {
  subnet_id      = aws_subnet.subnetA.id
  route_table_id = aws_route_table.route_ec2.id
}

resource "aws_default_security_group" "ecs_security_group" {
  vpc_id = aws_vpc.vpc.id

  ingress {
    protocol  = -1
    self      = true
    from_port = 0
    to_port   = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_iam_policy" "policy-ecs-spring" {
  name        = "test-policy"
  description = "A test policy"

  policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": [
        "ec2:*",
        "ecr:*",
        "logs:*"
      ],
      "Effect": "Allow",
      "Resource": "*"
    }
  ]
}
EOF
}

resource "aws_iam_role" "ecs" {

  assume_role_policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": [
            "ec2.amazonaws.com",
            "ecs-tasks.amazonaws.com"
        ]
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
POLICY
}


resource "aws_iam_role_policy_attachment" "ecs-attach" {
  role       = aws_iam_role.ecs.name
  policy_arn = aws_iam_policy.policy-ecs-spring.arn
}
